--- a/Equivariant_model.ipynb
+++ b/Equivariant_model.ipynb
@@ -50,6 +50,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.4142, -0.8241, -1.3256],\n",
+      "        [ 0.4490, -1.3201,  0.0399],\n",
+      "        [-1.2294, -0.4572, -0.3795]])\n",
+      "tensor([[-0.4142, -0.4120, -0.3314],\n",
+      "        [ 0.4490, -0.6601,  0.0100],\n",
+      "        [-1.2294, -0.2286, -0.0949]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.randn((3,3))\n",
+    "print(a)\n",
+    "a /= torch.tensor([1,2,4])\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +106,7 @@
     "force_reload    = False\n",
     "train           = False\n",
     "\n",
-    "dataset_test      =     DEM_Dataset(dataset_name,\"test\"    ,'delta', force_reload, pre_transform)\n",
+    "dataset_train      =     DEM_Dataset(dataset_name,\"train\"    ,'delta', force_reload, pre_transform)\n",
     "\n",
     "if train == True:\n",
     "    dataset_train     = DEM_Dataset(dataset_name,\"train\"   ,'delta', force_reload, pre_transform)\n",
@@ -94,6 +119,38 @@
     "                      epochs=2000,\n",
     "                      model_name=f\"{dataset_name}{model_ident}\")\n",
     "    #trainer.train_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = dataset_test.y\n",
+    "edge = dataset_test.edge_attr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.0000, 1.0000, 1.0000, 1.0000], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = y.mean(dim=0)\n",
+    "std = edge.std(dim=0)\n",
+    "std\n"
    ]
   },
   {
@@ -129,18 +186,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_max:      tensor([1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000],\n",
+      "       dtype=torch.float64)\n",
+      "y_mean:     tensor([ 2.0603e-16, -9.4266e-16,  8.6464e-17], dtype=torch.float64)\n",
+      "y_std:      tensor([1.0000, 1.0000, 1.0000], dtype=torch.float64)\n",
+      "edge_mean:  tensor([ 6.2205e-12,  4.8457e-13,  1.5131e-16, -1.0503e-07],\n",
+      "       dtype=torch.float64)\n",
+      "edge_std:   tensor([1.0000, 1.0000, 1.0000, 1.0000], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "#print(dataset_train.pos.min(),dataset_train.pos.max())\n",
     "#print(dataset_val.pos.min(),dataset_val.pos.max())\n",
     "#print(dataset_test.pos.min(),dataset_test.pos.max())\n",
     "\n",
-    "#print(dataset_train.x.max(dim=0)[0])\n",
-    "#print(dataset_val.x.max(dim=0)[0])\n",
-    "#print(dataset_test.x.max(dim=0)[0])\n",
-    "#dataset_train.y.mean()"
+    "print(f\"x_max:      {dataset_train.x.max(dim=0)[0]}\")\n",
+    "print(f\"y_mean:     {dataset_train.y.mean(dim=0)}\")\n",
+    "print(f\"y_std:      {dataset_train.y.std(dim=0)}\")\n",
+    "print(f\"edge_mean:  {dataset_train.edge_attr.mean(dim=0)}\")\n",
+    "print(f\"edge_std:   {dataset_train.edge_attr.std(dim=0)}\")"
    ]
   },
   {
@@ -175,11 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from Encoding import ConstructTopology, TopologyFromPlausibleTopology\n",
+    "from ML_functions import Rescale\n",
     "class LearnedSimulator:\n",
     "    def BCrollout(self):\n",
     "        print(\"Calculating BC\")\n",
@@ -195,7 +268,7 @@
     "        GroundTruth = np.empty(GetLength(self.par_data),dtype=object)\n",
     "        for t in trange(GetLength(self.par_data)):\n",
     "            MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,self.par_data[t],self.BC_rollout[t],self.tol)\n",
-    "            data= ToPytorchData(self.par_data[t],self.BC_rollout[t],self.tol,MatlabTopology,center=False)[0]\n",
+    "            data= ToPytorchData(self.par_data[t],self.BC_rollout[t],self.tol,MatlabTopology)[0]\n",
     "            GroundTruth[t] = data\n",
     "            GroundTruth[t].MatlabTopology = MatlabTopology\n",
     "        return GroundTruth\n",
@@ -206,29 +279,28 @@
     "            ML_Rollout = np.empty((self.timesteps),dtype=object)\n",
     "            par_inp = self.par_data[0]\n",
     "            MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,par_inp,self.BC_rollout[0],self.tol)\n",
-    "            ML_Rollout[0] = ToPytorchData(par_inp,self.BC_rollout[0],self.tol,MatlabTopology,center=False)[0]\n",
+    "            ML_Rollout[0] = ToPytorchData(par_inp,self.BC_rollout[0],self.tol,MatlabTopology)[0]\n",
     "            ML_Rollout[0].MatlabTopology = MatlabTopology\n",
     "            for t in tqdm(range(1,self.timesteps)):\n",
-    "                input_data = ToPytorchData(par_inp,self.BC_rollout[t],self.tol,MatlabTopology,center=False)[0]\n",
-    "                    #transform = T.Compose([T.Cartesian(False), T.Distance(norm=False,cat=True)])\n",
+    "                input_data = ToPytorchData(par_inp,self.BC_rollout[t],self.tol,MatlabTopology)[0]\n",
     "                if self.transform is not None: input_data = self.transform(input_data)\n",
     "                input_data.to(self.device)\n",
-    "                model.eval()\n",
     "                output = self.model(input_data)\n",
+    "                output = self.rescale(output)\n",
     "                par_inp[:,:3] = par_inp[:,:3]+output[input_data.mask].cpu().numpy()\n",
     "                MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,par_inp,self.BC_rollout[t],self.tol)\n",
-    "                output_data = ToPytorchData(par_inp,self.BC_rollout[t],self.tol,MatlabTopology,center=False)[0]\n",
+    "                output_data = ToPytorchData(par_inp,self.BC_rollout[t],self.tol,MatlabTopology,)[0]\n",
     "                ML_Rollout[t] = output_data\n",
     "                ML_Rollout[t].MatlabTopology = MatlabTopology\n",
     "        return ML_Rollout\n",
     "    \n",
-    "    def __init__(self,model,data_agr, top_agr,BC_agr,i: int,super_tol:int,tol:int,transform,timesteps:int=100):\n",
+    "    def __init__(self,i:int,model,data_agr, top_agr,BC_agr,scale_function,super_tol:int,tol:int,transform,timesteps:int=100):\n",
     "        self.device = torch.device('cuda' if torch.cuda.is_available()else 'cpu')\n",
     "        self.BC = BC_agr[i].copy()\n",
     "        self.par_data = data_agr[i].copy()\n",
     "        self.topology = top_agr[i].copy()\n",
     "        self.model = model.to(self.device)\n",
-    "        self.data_list = []\n",
+    "        self.rescale = scale_function\n",
     "        self.timesteps = timesteps\n",
     "        self.super_tol = super_tol\n",
     "        self.tol = tol\n",
