Fixed Dataloader deprication

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -58,13 +58,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Processing...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting train data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1700/1700 [01:58<00:00, 14.35it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-processing train data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 168300/168300 [00:34<00:00, 4916.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalizing train data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 168300/168300 [00:31<00:00, 5298.57it/s]\n",
+      "Done!\n",
+      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([_reconstruct])` to allowlist this global.\n",
+      "  warnings.warn(f\"{warn_msg} Please use \"\n",
+      "Processing...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting validate data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [00:14<00:00, 14.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-processing validate data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 19800/19800 [00:04<00:00, 4464.97it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalizing validate data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 19800/19800 [00:03<00:00, 5407.67it/s]\n",
+      "Done!\n",
       "Processing...\n"
      ]
     },
@@ -79,7 +169,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:07<00:00, 13.90it/s]\n"
+      "100%|██████████| 100/100 [00:06<00:00, 14.76it/s]\n"
      ]
     },
     {
@@ -93,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9900/9900 [00:02<00:00, 4279.98it/s]\n"
+      "100%|██████████| 9900/9900 [00:01<00:00, 5065.03it/s]\n"
      ]
     },
     {
@@ -107,10 +197,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9900/9900 [00:01<00:00, 5422.05it/s]\n",
-      "Done!\n",
-      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\io\\fs.py:229: UserWarning: Weights only load failed. Please file an issue to make `torch.load(weights_only=True)` compatible in your case. Please use `torch.serialization.add_safe_globals([_reconstruct])` to allowlist this global.\n",
-      "  warnings.warn(f\"{warn_msg} Please use \"\n"
+      "100%|██████████| 9900/9900 [00:01<00:00, 5093.59it/s]\n",
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded model\n",
+      "Device:  cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\deprecation.py:26: UserWarning: 'data.DataLoader' is deprecated, use 'loader.DataLoader' instead\n",
+      "  warnings.warn(out)\n"
      ]
     }
    ],
@@ -123,17 +227,17 @@
     "                           T.Distance(norm=False,cat=True)])\n",
     "transform       = None\n",
     "force_reload    = True\n",
-    "train           = False\n",
+    "train           = True\n",
     "\n",
-    "[dataset_test]      = [DEM_Dataset(dataset_name,\n",
-    "                                dataset_type,\n",
-    "                                mode             = 'delta',\n",
-    "                                force_reload     = force_reload,\n",
-    "                                pre_transform    = pre_transform,\n",
-    "                                super_tol        = 6,\n",
-    "                                tol              = 0,\n",
-    "                                noise_factor     = 0) \n",
-    "                                for dataset_type in [\"test\"]]\n",
+    "[dataset_train, dataset_val, dataset_test]      = [DEM_Dataset(dataset_name,\n",
+    "                                                               dataset_type,\n",
+    "                                                               mode             = 'delta',\n",
+    "                                                               force_reload     = force_reload,\n",
+    "                                                               pre_transform    = pre_transform,\n",
+    "                                                               super_tol        = 6,\n",
+    "                                                               tol              = 0,\n",
+    "                                                               noise_factor     = 0) \n",
+    "                                                               for dataset_type in [\"train\",\"validate\",\"test\"]]\n",
     "\n",
     "if train == True:\n",
     "    model = GetModel(dataset_name,model_ident,edge_dim=4)\n",
@@ -143,6 +247,26 @@
     "                      epochs=2000,\n",
     "                      model_name=f\"{dataset_name}{model_ident}\")\n",
     "    #trainer.train_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch_geometric.deprecation.DataLoader at 0x2309c167350>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train_dl"
    ]
   },
   {
