Migrating function definitions

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,10 +152,6 @@
     }
    ],
    "source": [
-    "#print(dataset_train.pos.min(),dataset_train.pos.max())\n",
-    "#print(dataset_val.pos.min(),dataset_val.pos.max())\n",
-    "#print(dataset_test.pos.min(),dataset_test.pos.max())\n",
-    "\n",
     "print(f\"x_max:      {dataset_test.x.max(dim=0)[0]}\")\n",
     "print(f\"y_mean:     {dataset_test.y.mean(dim=0)}\")\n",
     "print(f\"y_std:      {dataset_test.y.std(dim=0)}\")\n",
@@ -166,165 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def FilterStart(dataset):\n",
-    "    idx = np.nonzero([data.time == 0 for data in dataset])\n",
-    "    return torch.utils.data.Subset(dataset_test,idx)[0]\n",
-    "\n",
-    "#dataset_test_start = FilterStart(dataset_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import ToPytorchData, GetLength\n",
-    "\n",
-    "def GetLimits(data):\n",
-    "    max = [torch.max(data.x[:,i]) for i in [0, 1, 2]]\n",
-    "    min = [torch.min(data.x[:,i]) for i in [0, 1, 2]]\n",
-    "    max = torch.stack(max)\n",
-    "    min = torch.stack(min)\n",
-    "    limits = torch.stack([min,max],dim=1)\n",
-    "    return limits\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import ConstructTopology, TopologyFromPlausibleTopology\n",
-    "class LearnedSimulator:\n",
-    "    def __init__(self,i:int,model,data_agr, top_agr,BC_agr,scale_function,super_tol:int,tol:int,transform,timesteps:int=100):\n",
-    "        self.device = torch.device('cuda' if torch.cuda.is_available()else 'cpu')\n",
-    "        self.BC = BC_agr[i].copy()\n",
-    "        self.par_data = data_agr[i].copy()\n",
-    "        self.topology = top_agr[i].copy()\n",
-    "        self.model = model.to(self.device)\n",
-    "        self.rescale = scale_function\n",
-    "        self.timesteps = timesteps\n",
-    "        self.super_tol = super_tol\n",
-    "        self.tol = tol\n",
-    "        self.transform = transform\n",
-    "\n",
-    "    def BCrollout(self):\n",
-    "        print(\"Calculating BC\")\n",
-    "        BC_rollout = np.empty((GetLength(self.par_data),6,9))\n",
-    "        BC_t=np.copy(self.BC)\n",
-    "        for t in trange(GetLength(self.par_data)):\n",
-    "            BC_t[:,:3] = self.BC[:,:3]+(t+1)*self.BC[:,-3:] \n",
-    "            BC_rollout[t] = BC_t\n",
-    "        return BC_rollout\n",
-    "    \n",
-    "    def GroundTruth_Rollout(self):\n",
-    "        print(\"Collecting Ground Truth Rollout\")\n",
-    "        GroundTruth = np.empty(GetLength(self.par_data),dtype=object)\n",
-    "        for t in trange(GetLength(self.par_data)):\n",
-    "            MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,self.par_data[t],self.BC_rollout[t],self.tol)\n",
-    "            GroundTruth[t] = ToPytorchData(self.par_data[t],self.BC_rollout[t],self.tol,MatlabTopology)[0]\n",
-    "            GroundTruth[t].MatlabTopology = MatlabTopology\n",
-    "        return GroundTruth\n",
-    "    \n",
-    "    def Rollout_Step(self,par_inp, BC,MatlabTopology):\n",
-    "        # Update Boundary conditions\n",
-    "        BC[:,:3] += BC[:,-3:]\n",
-    "\n",
-    "        # Convert raw data to PyTorch Graphdata\n",
-    "        input_data = ToPytorchData(par_inp,BC,self.tol,MatlabTopology)[0]\n",
-    "        if self.transform is not None: input_data = self.transform(input_data)\n",
-    "        input_data.to(self.device)\n",
-    "\n",
-    "        # Run ML Model\n",
-    "        output = self.model(input_data)\n",
-    "\n",
-    "        # With displacement vectors update particle positions and topology\n",
-    "        output = self.rescale(output,self.device)\n",
-    "        par_inp[:,:3] = par_inp[:,:3]+output[input_data.mask].cpu().numpy()\n",
-    "        MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,par_inp,BC,self.tol)\n",
-    "\n",
-    "        return output, par_inp, BC, MatlabTopology\n",
-    "    \n",
-    "    def MLRollout(self):\n",
-    "        print(\"Calculating Learned Rollout\")\n",
-    "        with torch.inference_mode():\n",
-    "            # Initiate Rollout\n",
-    "            ML_Rollout = np.empty((self.timesteps),dtype=object)\n",
-    "            par_inp = self.par_data[0]\n",
-    "            BC = self.BC\n",
-    "            MatlabTopology = TopologyFromPlausibleTopology(self.super_topology,par_inp,BC,self.tol)\n",
-    "            ML_Rollout[0] = ToPytorchData(par_inp,BC,self.tol,MatlabTopology)[0]\n",
-    "            ML_Rollout[0].MatlabTopology = MatlabTopology\n",
-    "\n",
-    "            # Rollout\n",
-    "            for t in tqdm(range(1,self.timesteps),initial=1):\n",
-    "                output, par_inp, BC, MatlabTopology = self.Rollout_Step(par_inp, BC, MatlabTopology)\n",
-    "                # Save equilibrium positions\n",
-    "                ML_Rollout[t] = ToPytorchData(par_inp,BC,self.tol,MatlabTopology)[0]\n",
-    "                ML_Rollout[t].MatlabTopology = MatlabTopology\n",
-    "\n",
-    "        return ML_Rollout\n",
-    "\n",
-    "    def Rollout(self):\n",
-    "        self.BC_rollout = self.BCrollout()\n",
-    "        self.super_topology = ConstructTopology(self.par_data[0],self.BC_rollout[0],self.super_tol)-1\n",
-    "        self.GroundTruth = self.GroundTruth_Rollout()\n",
-    "        self.ML_rollout = self.MLRollout()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import load\n",
-    "def SplitData(dataset_name,data_split):\n",
-    "    loaded_data = load(dataset_name)\n",
-    "    splits=np.array(data_split)*loaded_data[0].shape[0]\n",
-    "    test_data = [np.split(data,splits.astype(int))[2] for data in loaded_data]\n",
-    "    return test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import load\n",
-    "from ML_functions import DataMask\n",
-    "def MaskTestData(dataset_name,dataset_type: Literal[\"train\",\"validate\",\"test\"]):\n",
-    "    \"\"\"Masks out testdata from rawdata array\n",
-    "\n",
-    "    Args:\n",
-    "        dataset_name (string): Name of the dataset\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: [data, top, bc]\n",
-    "    \"\"\"\n",
-    "    type_dic= {\"train\": 0, \"validate\":1, \"test\":2}\n",
-    "    loaded_data = load(dataset_name)\n",
-    "    mask = DataMask(loaded_data[0],)[type_dic[dataset_type]]\n",
-    "    test_data = [data[mask] for data in loaded_data]\n",
-    "    return test_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generating Rollouts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,8 +182,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating Rollouts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +203,7 @@
    ],
    "source": [
     "from Plotting import PlotXYZ\n",
-    "from ML_functions import NormalizeData, GetModel, Rescale, NormalizePos\n",
+    "from ML_functions import LearnedSimulator, NormalizeData, GetModel, Rescale, NormalizePos, MaskTestData\n",
     "dataset_name=\"2Sphere\"\n",
     "model_ident = \"NewModel_1\"\n",
     "model = GetModel(dataset_name,model_ident)\n",
@@ -368,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 36634.68it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 33447.40it/s]\n"
      ]
     },
     {
@@ -396,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 895.11it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 872.18it/s]\n"
      ]
     },
     {
@@ -410,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100it [00:01, 82.86it/s]                       \n"
+      "100it [00:01, 91.90it/s]                        \n"
      ]
     },
     {
@@ -598,6 +442,50 @@
    "metadata": {},
    "source": [
     "## Old Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FilterStart(dataset):\n",
+    "    idx = np.nonzero([data.time == 0 for data in dataset])\n",
+    "    return torch.utils.data.Subset(dataset_test,idx)[0]\n",
+    "\n",
+    "#dataset_test_start = FilterStart(dataset_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Encoding import ToPytorchData, GetLength\n",
+    "\n",
+    "def GetLimits(data):\n",
+    "    max = [torch.max(data.x[:,i]) for i in [0, 1, 2]]\n",
+    "    min = [torch.min(data.x[:,i]) for i in [0, 1, 2]]\n",
+    "    max = torch.stack(max)\n",
+    "    min = torch.stack(min)\n",
+    "    limits = torch.stack([min,max],dim=1)\n",
+    "    return limits\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Encoding import load\n",
+    "def SplitData(dataset_name,data_split):\n",
+    "    loaded_data = load(dataset_name)\n",
+    "    splits=np.array(data_split)*loaded_data[0].shape[0]\n",
+    "    test_data = [np.split(data,splits.astype(int))[2] for data in loaded_data]\n",
+    "    return test_data"
    ]
   },
   {
