Working on push forward, refactored Job scripts

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,6 +47,36 @@
     "from typing import Literal\n",
     "\n",
     "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sim = np.zeros(shape=(10))\n",
+    "for t in np.arange(len(sim)-1):\n",
+    "    step_max = 4\n",
+    "    push_forward_steps = np.random.randint(0,step_max+1)\n",
+    "    push_forward_steps = min(push_forward_steps,len(sim)-t-2)\n",
+    "    print(push_forward_steps)"
    ]
   },
   {
@@ -550,7 +580,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DEM-GNN2",
    "language": "python",
    "name": "python3"
   },
