Made topology Faster

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,12 +41,73 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "import time\n",
     "\n",
     "from tqdm import tqdm, trange\n",
     "from IPython.display import clear_output\n",
     "from typing import Literal\n",
     "\n",
     "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Encoding import ConstructTopology\n",
+    "from ML_functions import MaskTestData\n",
+    "dataset_name = 'N400'\n",
+    "AggregatedArgs = MaskTestData(dataset_name,'test')\n",
+    "data,top,bc = AggregatedArgs\n",
+    "data = data[0]\n",
+    "top = top[0]\n",
+    "bc = bc[0]\n",
+    "t=0\n",
+    "BC_t = bc.copy()\n",
+    "BC_t[:,:3] = bc[:,:3]+(t+1)*bc[:,-3:]\n",
+    "\n",
+    "\n",
+    "par_data = data[0]\n",
+    "super_topology = ConstructTopology(par_data,BC_t,6)-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TopologySlice(super_topology_PP,idx):\n",
+    "    par_idx = super_topology_PP[:,idx]\n",
+    "    pos = par_data[par_idx,:3]\n",
+    "    radius = par_data[par_idx,3]\n",
+    "    return par_idx,pos,radius\n",
+    "\n",
+    "def TopologyFromPlausibleTopology_new(super_topology,par_data,BC_t,tol):\n",
+    "    R_avg = par_data[:,3].mean()\n",
+    "    PP_mask = super_topology[:,1]>0\n",
+    "    super_topology_PP = super_topology[PP_mask]\n",
+    "    super_topology_PW = super_topology[~PP_mask]\n",
+    "\n",
+    "    [idx_i,pos_i,radius_i] = TopologySlice(super_topology_PP,0)\n",
+    "    [idx_j,pos_j,radius_j] = TopologySlice(super_topology_PP,1)\n",
+    "    mask_PP = np.linalg.norm(pos_i-pos_j,axis=1)-(radius_i+radius_j) <= tol*R_avg\n",
+    "    topology_PP = super_topology_PP[mask_PP]\n",
+    "\n",
+    "\n",
+    "    [idx_i,pos_i,radius_i] = TopologySlice(super_topology_PW,0)\n",
+    "    idx_w = -super_topology_PW[:,1]-2\n",
+    "    PW_vector = BC_t[idx_w,:3]-pos_i\n",
+    "    wall_normal_vector = BC_t[idx_w,3:6]\n",
+    "    wall_projection = (PW_vector*wall_normal_vector)*wall_normal_vector\n",
+    "    dist_wall = np.linalg.norm(wall_projection.astype(float),axis=1)\n",
+    "    mask_PW = dist_wall-radius_i <= tol*R_avg\n",
+    "    topology_PW = super_topology_PW[mask_PW]\n",
+    "\n",
+    "    topology = np.concatenate((topology_PP,topology_PW))\n",
+    "    return topology"
    ]
   },
   {
@@ -432,29 +493,6 @@
     "standard_deviation = noise_factor*R_avg\n",
     "noise = np.array(standard_deviation*torch.randn((par_data.shape[0],3)))\n",
     "par_data[:,:3]+=noise\n",
-    "print(par_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Encoding import ConstructTopology\n",
-    "AggregatedArgs = MaskTestData(dataset_name)\n",
-    "data,top,bc = AggregatedArgs\n",
-    "data = data[0]\n",
-    "top = top[0]\n",
-    "bc = bc[0]\n",
-    "t=0\n",
-    "BC_t = bc.copy()\n",
-    "BC_t[:,:3] = bc[:,:3]+(t+1)*bc[:,-3:]\n",
-    "\n",
-    "print(data.shape)\n",
-    "R_avg = data[0,:,3].mean()\n",
-    "par_data = data[0]\n",
-    "super_topology = ConstructTopology(par_data,BC_t,1)-1\n",
     "print(par_data)"
    ]
   },
