--- a/Main.ipynb
+++ b/Main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,6 +42,61 @@
     "from tqdm import tqdm, trange\n",
     "\n",
     "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ML_functions import MaskTestData\n",
+    "[data, top, bc] = MaskTestData(\"2Sphere\",\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.3670361e-07,  7.0110654e-08,  3.2672719e-01,  1.3073907e-07,\n",
+       "        -1.5572307e-07,  3.2574406e-01, -3.1173370e-07,  2.2480606e-07,\n",
+       "         3.2476093e-01,  6.3107641e-07, -6.4133348e-07,  3.2377780e-01,\n",
+       "        -1.1799478e-06, -1.1411486e-06,  3.2279467e-01, -2.7094817e-08,\n",
+       "        -1.9931071e-06,  3.2181153e-01, -3.1682445e-06, -3.1670173e-06,\n",
+       "         3.2082840e-01,  4.7561179e-06, -4.7558073e-06,  3.1984527e-01,\n",
+       "        -6.8132720e-06,  5.0790907e-08,  3.1886214e-01, -9.4040629e-06,\n",
+       "        -9.4042114e-06,  3.1787901e-01],\n",
+       "       [-1.1330610e-07,  3.0674740e-08, -3.2672719e-01, -1.7050135e-07,\n",
+       "         1.2672933e-07, -3.2574406e-01,  3.4255980e-07, -2.3416613e-07,\n",
+       "        -3.2476093e-01, -6.3659846e-07,  6.5290199e-07, -3.2377780e-01,\n",
+       "         1.1652720e-06,  1.1409612e-06, -3.2279467e-01, -3.2834759e-08,\n",
+       "         1.9920020e-06, -3.2181153e-01,  3.1680790e-06,  3.1670667e-06,\n",
+       "        -3.2082840e-01, -4.7561064e-06,  4.7558076e-06, -3.1984527e-01,\n",
+       "         6.8132720e-06,  4.7062998e-08, -3.1886214e-01,  9.4040711e-06,\n",
+       "         9.4042464e-06, -3.1787901e-01]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bundle_size = 10\n",
+    "time_bundle = data[0,:bundle_size,:,:3].astype(float)\n",
+    "print(time_bundle.shape)\n",
+    "np.reshape(np.stack(time_bundle,axis=1),(-1,3*bundle_size))"
    ]
   },
   {
